kubernetes/apps/observability/headlamp/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    dashboard.home/enabled: "true"
    dashboard.home/name: Headlamp
    dashboard.home/description: Monitoring & observability
    dashboard.home/icon: headlamp
    dashboard.home/group: Infrastructure
spec:
  hostnames:
    - headlamp.hemma.dev
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: headlamp
          namespace: observability
          port: 4466
